--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Younger</title>
+		<title>Project June</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 		<link rel="stylesheet" type="text/css" href="styles.css" />
 	</head>
@@ -10,4 +10,4 @@
 		<object id="gameObject" class="svgObject" type="image/svg+xml" data="game.svg"></object>
 		<div id="log"></div>
 	</body>
-	</html>
+</html>
