--- a/index.html
+++ b/index.html
@@ -3,11 +3,16 @@
 	<head>
 		<title>Project June</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-		<link rel="stylesheet" type="text/css" href="styles.css" />
+		<link rel="stylesheet" type="text/css" href="styles/common.css" />
+		<link rel="stylesheet" type="text/css" href="styles/main.css" />
 	</head>
 	<body>
-		<script src="game.js"></script>
-		<object id="gameObject" class="svgObject" type="image/svg+xml" data="game.svg"></object>
+		<script src="scripts/game.js"></script>
+		<object id="gameObject" class="svgObject" type="image/svg+xml" data="svgs/game.svg"></object>
+		
+		<script src="scripts/pause.js"></script>
+		<object id="pauseObject" class="svgObject" type="image/svg+xml" data="svgs/pause.svg"></object>
+
 		<div id="log"></div>
 	</body>
 </html>
