--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 		<link rel="stylesheet" type="text/css" href="styles/main.css" />
 	</head>
 	<body>
+		<script src="scripts/main.js"></script>
+		<script src="scripts/debug.js"></script>
+
 		<script src="scripts/game.js"></script>
 		<object id="gameObject" class="svgObject" type="image/svg+xml" data="svgs/game.svg"></object>
 		
