--- a/index.html
+++ b/index.html
@@ -17,5 +17,6 @@
 		<object id="pauseObject" class="svgObject" type="image/svg+xml" data="svgs/pause.svg"></object>
 
 		<div id="log"></div>
+		<div id="disclaimer">CONFIDENTIAL! DO NOT SHARE!</div>
 	</body>
 </html>
