--- a/index.html
+++ b/index.html
@@ -33,6 +33,13 @@
 				</div>
 			</div>
 		</div> -->
+		
+		<div id="loading" class="fullScreen">
+			<div id="loadingBox">
+				<div id="loadingText">LOADING</div>
+				<div id="loadingSpinner"></div>
+			</div>
+		</div>
 
 		<div id="log"></div>
 		<div id="disclaimer" class="fullScreen">CONFIDENTIAL! DO NOT SHARE!</div>
