Data file organization

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 		<div id="log"></div>
 		<div id="disclaimer" class="fullScreen">CONFIDENTIAL! DO NOT SHARE!</div>
 
-		<audio id="audioTest1" src="./sounds/test.wav"></audio>
-		<audio id="audioTest2" src="./sounds/test2.wav"></audio>
+		<audio id="audioTest1" src="./data/sounds/test.wav"></audio>
+		<audio id="audioTest2" src="./data/sounds/test2.wav"></audio>
 	</body>
 </html>
