Excel import, hand-written notes

--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
 			</div>
 		</div>
 
-		<div id="log"></div>
+		<div id="log" class="ignoreCursor"></div>
+		<div id="pos" class="ignoreCursor"></div>
 		<div id="disclaimer" class="fullScreen">CONFIDENTIAL! DO NOT SHARE!</div>
 
 		<audio id="audioTest1" src="./data/sounds/test.wav"></audio>
