--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 	<head>
 		<title>Project June</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-		<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Caveat" />
-		<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Nunito" />
-		<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto+Slab" />
+		<link rel="dns-prefetch" href="//fonts.googleapis.com">
+		<link href="https://fonts.gstatic.com" crossorigin="" rel="preconnect">
+		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Caveat|Roboto+Slab">
 		<link rel="stylesheet" type="text/css" href="styles/common.css" />
 		<link rel="stylesheet" type="text/css" href="styles/main.css" />
 	</head>
@@ -43,7 +43,7 @@
 
 		<div id="log" class="ignoreCursor"></div>
 		<div id="pos" class="ignoreCursor"></div>
-		<div id="disclaimer" class="fullScreen">CONFIDENTIAL! DO NOT SHARE!</div>
+		<div id="disclaimer">CONFIDENTIAL! DO NOT SHARE!</div>
 
 		<audio id="audioTest1" src="./data/sounds/test.wav"></audio>
 		<audio id="audioTest2" src="./data/sounds/test2.wav"></audio>
