Sorting script files

--- a/index.html
+++ b/index.html
@@ -55,8 +55,9 @@
 
 		<!-- Scripts -->
 		<script src="scripts/defs.js"></script>
-		<script src="scripts/main.js"></script>
 		<script src="scripts/debug.js"></script>
+		<script src="scripts/main.js"></script>
+		<script src="scripts/camera.js"></script>
 		<script src="scripts/game.js"></script>
 	</body>
 </html>
