--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
 		<script src="scripts/defs.js"></script>
 		<script src="scripts/debug.js"></script>
 		<script src="scripts/main.js"></script>
-		<script src="scripts/camera.js"></script>
 		<script src="scripts/game.js"></script>
+		<script src="scripts/camera.js"></script>
+		<script src="scripts/tile.js"></script>
 	</body>
 </html>
