--- a/index.html
+++ b/index.html
@@ -60,5 +60,6 @@
 		<script src="scripts/game.js"></script>
 		<script src="scripts/camera.js"></script>
 		<script src="scripts/tile.js"></script>
+		<script src="scripts/note.js"></script>
 	</body>
 </html>
