Note fade in/out

--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
 		<div id="disclaimer">CONFIDENTIAL! DO NOT SHARE!</div>
 
 		<!-- Audio -->
-		<audio id="audioTest1" src="./data/sounds/test.wav"></audio>
-		<audio id="audioTest2" src="./data/sounds/test2.wav"></audio>
+		<audio id="tileMove" src="./data/sounds/tileMove.wav"></audio>
+		<audio id="tileConfirm" src="./data/sounds/tileConfirm.wav"></audio>
 
 		<!-- Scripts -->
 		<script src="scripts/defs.js"></script>
