Added HTML note

--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
 
 		<!-- Game -->
 		<object id="gameObject" class="fullScreen" type="image/svg+xml" data="svgs/game.svg"></object>
+
+		<div class="fullScreen ignoreCursor"></div>
+			<div id="note2" class="hidden">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras congue elit nec porttitor tincidunt. Vivamus sollicitudin, odio eu commodo lacinia, est massa congue sapien, nec dapibus est justo non eros. </div>
+		</div>
 		
 		<!-- Loading screen -->
 		<div id="loading" class="fullScreen hidden">
