--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Caveat|Roboto+Slab">
 		<link rel="stylesheet" type="text/css" href="styles/common.css" />
 		<link rel="stylesheet" type="text/css" href="styles/main.css" />
+		<link rel="stylesheet" type="text/css" href="styles/stars.css" />
 	</head>
 	<body>
 		<!-- <script src="scripts/pause.js"></script>
@@ -27,6 +28,9 @@
 				</div>
 			</div>
 		</div> -->
+
+		<!-- Starry sky -->
+		<div id="sky"></div>
 
 		<!-- Game -->
 		<object id="gameObject" class="fullScreen" type="image/svg+xml" data="svgs/game.svg"></object>
@@ -65,5 +69,6 @@
 		<script src="scripts/camera.js"></script>
 		<script src="scripts/tile.js"></script>
 		<script src="scripts/note.js"></script>
+		<script src="scripts/stars.js"></script>
 	</body>
 </html>
