--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 
 		<!-- Starry sky -->
 		<div id="sky"></div>
+		<div id="haze"></div>
 
 		<!-- Game -->
 		<object id="gameObject" class="fullScreen" type="image/svg+xml" data="svgs/game.svg"></object>
