Improved text scaling on mobile

--- a/index.html
+++ b/index.html
@@ -37,15 +37,15 @@
 		<div id="messageArea" class="fullScreen">
 			<div id="messageBox">
 				<div id="title">
-					<p class="tier0_large">Vera and Karel's</p>
-					<p id="tier0_sex">YONGER SON</p>
-					<p class="tier0_large">was born on June XXth 2024</p>
+					<h2>Vera and Karel's</h2>
+					<h1 id="titleBaby">YOUNGER SON</h1>
+					<h2>was born on June XXth 2024</h2>
 				</div>
 				<div>
 					<p>To find out their name, please play<br />a little game we designed.</p>
 
 					<div id="play" class="hidden">
-						<p><em>(for the best experience turn the sound on 🔊)</em></p>
+						<p><em>(turn the sound on)</em></p>
 
 						<!-- Button -->
 						<button id="playButton" type="button" autofocus disabled>
