Intro data cleanup
Changed: Message renamed to Intro
Removed: Obsolete Pause menu

--- a/index.html
+++ b/index.html
@@ -8,12 +8,10 @@
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Caveat|Roboto+Slab">
 		<link rel="stylesheet" type="text/css" href="styles/common.css" />
 		<link rel="stylesheet" type="text/css" href="styles/main.css" />
+		<link rel="stylesheet" type="text/css" href="styles/intro.css" />
 		<link rel="stylesheet" type="text/css" href="styles/stars.css" />
 	</head>
 	<body>
-		<!-- <script src="scripts/pause.js"></script>
-		<object id="pauseObject" class="fullScreen" type="image/svg+xml" data="svgs/pause.svg"></object> -->
-
 		<!-- Starry sky -->
 		<div id="sky"></div>
 		<div id="haze"></div>
@@ -34,8 +32,8 @@
 		</div> -->
 
 		<!-- Pause menu -->
-		<div id="messageArea" class="fullScreen">
-			<div id="messageBox">
+		<div id="introArea" class="fullScreen">
+			<div id="introBox">
 				<div id="title">
 					<h2>Vera and Karel's</h2>
 					<h1 id="titleBaby">YOUNGER SON</h1>
@@ -84,6 +82,6 @@
 		<script src="scripts/tile.js"></script>
 		<script src="scripts/note.js"></script>
 		<script src="scripts/stars.js"></script>
-		<script src="scripts/message.js"></script>
+		<script src="scripts/intro.js"></script>
 	</body>
 </html>
