--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 		<link rel="stylesheet" type="text/css" href="styles/main.css" />
 		<link rel="stylesheet" type="text/css" href="styles/stars.css" />
 		<link rel="stylesheet" type="text/css" href="styles/intro.css" />
+		<link rel="stylesheet" type="text/css" href="styles/outro.css" />
 		<link rel="stylesheet" type="text/css" href="styles/note.css" />
 	</head>
 	<body>
@@ -55,6 +56,14 @@
 						<p id="noScript">Please <a href="https://www.enablejavascript.io" target="_blank">enable JavaScript</a> in your browser to play the game.</p>
 					</noscript>
 				</div>
+			</div>
+		</div>
+
+		<!-- Outro -->
+		<div id="outroArea" class="fullScreen ignoreCursor">
+			<div id="outroBox">
+				<p>Welcome to this world,</p>
+				<h1>NAME</h1>
 			</div>
 		</div>
 
