--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
 	</head>
 	<body>
 		<!-- Starry sky -->
-		<div id="sky"></div>
+		<div id="sky">
+			<object type="image/svg+xml" data="svgs/stars1.svg"></object>
+			<object type="image/svg+xml" data="svgs/stars2.svg"></object>
+			<object type="image/svg+xml" data="svgs/stars3.svg"></object>
+		</div>
 		<div id="haze"></div>
 
 		<!-- Game -->
@@ -53,7 +57,7 @@
 
 					<!-- Info about disabled JavaScript -->
 					<noscript>
-						<p id="noScript">Please <a href="https://www.enablejavascript.io" target="_blank">enable JavaScript</a> in your browser to play the game.</p>
+						<p id="noScript">The game requires JavaScript. Follow <a href="https://www.enablejavascript.io" target="_blank">this guide</a> to enable it in your browser.</p>
 					</noscript>
 				</div>
 			</div>
@@ -84,7 +88,7 @@
 		<script src="scripts/camera.js"></script>
 		<script src="scripts/tile.js"></script>
 		<script src="scripts/note.js"></script>
-		<script src="scripts/stars.js"></script>
+		<!-- <script src="scripts/stars.js"></script> -->
 		<script src="scripts/intro.js"></script>
 	</body>
 </html>
