Parametric outro animation length

--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 <html>
 	<head>
 		<title>Project June</title>
+		<meta charset="UTF-8" />
+		<meta name="author" content="Karel Moricky and Vera Ryzhkina">
+		<meta name="keywords" content="HTML, CSS, JavaScript">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+
 		<link rel="dns-prefetch" href="//fonts.googleapis.com">
 		<link href="https://fonts.gstatic.com" crossorigin="" rel="preconnect">
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Caveat|Roboto+Slab">
@@ -65,9 +69,9 @@
 
 		<!-- Outro -->
 		<div id="outroArea" class="fullScreen ignoreCursor">
-			<div id="outroBox">
+			<div id="outroBox" class="hidden animateOutroIn">
 				<p>Welcome to this world,</p>
-				<h1>NAME</h1>
+				<h1>&nbsp;NAME</h1>
 			</div>
 		</div>
 
