Star SVGs merged into one

--- a/index.html
+++ b/index.html
@@ -20,9 +20,7 @@
 	<body>
 		<!-- Starry sky -->
 		<div id="sky">
-			<object type="image/svg+xml" data="svgs/stars1.svg"></object>
-			<object type="image/svg+xml" data="svgs/stars2.svg"></object>
-			<object type="image/svg+xml" data="svgs/stars3.svg"></object>
+			<object type="image/svg+xml" data="svgs/stars.svg"></object>
 		</div>
 		<div id="haze"></div>
 
