Tiles fade out behind the heart

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
 		<!-- Outro -->
 		<div id="outroArea" class="fullScreen ignoreCursor">
-			<div id="outroBox" class="hidden animateOutroIn">
+			<div id="outroBox" class="hidden animOutroIn">
 				<p>Welcome to this world,</p>
 				<h1>&nbsp;NAME</h1>
 			</div>
