WIP connected tiles

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 		<!-- Dev tools -->
 		<div id="log" class="ignoreCursor"></div>
 		<div id="pos" class="ignoreCursor"></div>
-		<div id="disclaimer">CONFIDENTIAL! DO NOT SHARE!</div>
+		<div id="disclaimer">WORK IN PROGRESS! DO NOT SHARE!</div>
 
 		<!-- Audio -->
 		<audio id="tileMove" src="./data/sounds/tileMove.wav"></audio>
