Added language selection

--- a/index.html
+++ b/index.html
@@ -29,6 +29,12 @@
 
 		<!-- Intro -->
 		<div id="introArea" class="fullScreen">
+			<div id="languageBox" class="hidden">
+				<button id="languageEN" type="button" disabled>English</button>
+				<button id="languageCS" type="button">Česky</button>
+				<button id="languageRU" type="button">Русский</button>
+			</div>
+
 			<div id="introBox">
 				<div id="title">
 					<h2 id="locIntroTitle1">Vera and Karel's</h2>
@@ -39,7 +45,7 @@
 					<p id="locIntroGame">To find out their name, please play<br />a little game we designed.</p>
 
 					<div id="play" class="hidden">
-						<p><em id="locIntroSound">(turn the sound on)</em></p>
+						<p><em id="locIntroSound">(with the sound on)</em></p>
 
 						<!-- Button -->
 						<button id="playButton" type="button" autofocus disabled>
