--- a/index.html
+++ b/index.html
@@ -70,17 +70,8 @@
 			</div>
 		</div>
 
-		<!-- Notes -->
-		<div id="note_tile02" class="note hidden">Note 02</div>
-		<div id="note_tile03" class="note hidden">Note 03</div>
-		<div id="note_tile04" class="note hidden">Note 04</div>
-		<div id="note_tile05" class="note hidden">Note 05</div>
-		<div id="note_tile06" class="note hidden">Note 06</div>
-		<div id="note_tile07" class="note hidden">Note 07</div>
-		<div id="note_tile08" class="note hidden">Note 08</div>
-		<div id="note_tile09" class="note hidden">Note 09</div>
-		<div id="note_tile10" class="note hidden">Note 10</div>
-		<div id="note_tile11" class="note hidden">Note 11</div>
+		<!-- Note -->
+		<div id="note" class="hidden"></div>
 
 		<!-- Outro -->
 		<div id="outroArea" class="fullScreen ignoreCursor">
