Added "Thank you" note

--- a/index.html
+++ b/index.html
@@ -71,7 +71,9 @@
 		</div>
 
 		<!-- Note -->
-		<div id="note" class="hidden"></div>
+		<div id="noteArea" class="ignoreCursor">
+			<div id="note" class="hidden"></div>
+		</div>
 
 		<!-- Outro -->
 		<div id="outroArea" class="fullScreen ignoreCursor">
@@ -79,6 +81,11 @@
 				<p id="locOutro">Welcome to this world,</p>
 				<h1>&nbsp;NAME</h1>
 			</div>
+		</div>
+
+		<!-- Thank you note -->
+		<div id="thanksArea" class="fullScreen ignoreCursor">
+			<div id="thanks" class="hidden">Thank you for playing!</div>
 		</div>
 
 		<!-- Dev tools -->
