Outro separated into own script

--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@
 		<script src="scripts/camera.js"></script>
 		<script src="scripts/tile.js"></script>
 		<script src="scripts/note.js"></script>
-		<!-- <script src="scripts/stars.js"></script> -->
 		<script src="scripts/intro.js"></script>
+		<script src="scripts/outro.js"></script>
 		<script src="scripts/localization.js"></script>
 	</body>
 </html>
