Interactive outro improved

--- a/index.html
+++ b/index.html
@@ -76,11 +76,9 @@
 		</div>
 
 		<!-- Outro -->
-		<div id="outroArea" class="fullScreen ignoreCursor">
-			<div id="outroBox" class="hidden animOutroIn">
-				<p id="locOutro">Welcome to this world,</p>
-				<h1>&nbsp;NAME</h1>
-			</div>
+		<div class="fullScreen ignoreCursor">
+			<div id="outroNote" class="hidden">Welcome to this world,</div>
+			<div id="outroName" class="hidden">NAME</div>
 		</div>
 
 		<!-- Thank you note -->
