--- a/index.html
+++ b/index.html
@@ -82,8 +82,9 @@
 		</div>
 
 		<!-- Thank you note -->
-		<div id="thanksArea" class="fullScreen ignoreCursor">
-			<div id="thanks" class="hidden">Thank you for playing!</div>
+		<div id="creditsArea" class="hidden">
+			<div id="thanks">Thank you for playing!</div>
+			<div id="credits">Made by <a href="https://www.instagram.com/dododollydo/">Mom</a> and <a href="http://moricky.com">Dad</a>, art by TBD, testing by Katka, Joris, and Marek</div>
 		</div>
 
 		<!-- Dev tools -->
