Added links in credits.

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 		<!-- Thank you note -->
 		<div id="creditsArea" class="hidden">
 			<div id="thanks">Thank you for playing!</div>
-			<div id="credits">Made by <a href="https://www.instagram.com/dododollydo/">Mom</a> and <a href="http://moricky.com">Dad</a>, art by TBD, testing by Katka, Joris, and Marek</div>
+			<div id="credits">Game by <a href="https://www.instagram.com/dododollydo/">Mom</a> and <a href="http://moricky.com">Dad</a>, art by <a href="#">TBD</a>, testing by <a href="https://www.instagram.com/katacik/">Katka</a>, <a href="https://twitter.com/YorisYan">Joris</a>, and <a href="https://twitter.com/maruksp">Marek</a></div>
 		</div>
 
 		<!-- Dev tools -->
