--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 			<div id="introBox">
 				<div id="title">
 					<h2 id="locIntroTitle1">Vera and Karel's</h2>
-					<h1 id="titleBaby">YOUNGER SON</h1>
+					<h1 id="titleBaby">DAUGHTER</h1>
 					<h2 id="locIntroTitle2">was born on June XXth 2024</h2>
 				</div>
 				<div>
