--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 					<h2 id="locIntroTitle2">was born on June XXth 2024</h2>
 				</div>
 				<div>
-					<p id="locIntroGame">To find out their name, please play<br />a little game we designed.</p>
+					<p id="locIntroGame">To find out her name, please play<br />a little game we designed for her.</p>
 
 					<div id="play" class="hidden">
 						<p><em id="locIntroSound">(with the sound on)</em></p>
