Added placeholder sounds

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 		<!-- Thank you note -->
 		<div id="creditsArea" class="hidden">
 			<div id="thanks">Thank you for playing!</div>
-			<div id="credits">Game by <a href="https://www.instagram.com/dododollydo/">Mom</a> and <a href="http://moricky.com">Dad</a>, art by <a href="#">TBD</a>, testing by <a href="https://www.instagram.com/katacik/">Katka</a>, <a href="https://twitter.com/YorisYan">Joris</a>, and <a href="https://twitter.com/maruksp">Marek</a></div>
+			<div id="credits">Game by <a href="https://www.instagram.com/dododollydo/">Mom</a> and <a href="http://moricky.com">Dad</a>, art by <a href="#">TBD</a>, audio by <a href="#">TBD</a>, testing by <a href="https://www.instagram.com/katacik/">Katka</a>, <a href="https://twitter.com/YorisYan">Joris</a>, and <a href="https://twitter.com/maruksp">Marek</a></div>
 		</div>
 
 		<!-- Dev tools -->
@@ -93,8 +93,16 @@
 		<div id="disclaimer">WORK IN PROGRESS! DO NOT SHARE!</div>
 
 		<!-- Audio -->
-		<audio id="tileMove" src="./data/sounds/tileMove.wav"></audio>
-		<audio id="tileConfirm" src="./data/sounds/tileConfirm.wav"></audio>
+		<audio id="audioPlay"			src="./data/sounds/play.wav"></audio>
+		<audio id="audioTileDragStart"	src="./data/sounds/tileDragStart.wav"></audio>
+		<audio id="audioTileDragEnd"	src="./data/sounds/tileDragEnd.wav"></audio>
+		<audio id="audioTileSnapStart"	src="./data/sounds/tileSnapStart.wav"></audio>
+		<audio id="audioTileSnapEnd"	src="./data/sounds/tileSnapEnd.wav"></audio>
+		<audio id="audioNoteStart"		src="./data/sounds/noteStart.wav"></audio>
+		<audio id="audioNoteEnd"		src="./data/sounds/noteEnd.wav"></audio>
+		<audio id="audioOutroStart"		src="./data/sounds/outroStart.wav"></audio>
+		<audio id="audioOutroName"		src="./data/sounds/outroName.wav"></audio>
+		<audio id="audioOutroEnd"		src="./data/sounds/outroEnd.wav"></audio>
 
 		<!-- Scripts -->
 		<script src="scripts/defs.js"></script>
