Added: Lyra constellation

--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
 		</div>
 		<div id="haze"></div>
 
+		<!-- Constellation -->
+		<object id="constellationObject" class="fullScreen" type="image/svg+xml" data="svgs/constellation.svg"></object>
+
 		<!-- Game -->
 		<object id="gameObject" class="fullScreen" type="image/svg+xml" data="svgs/game.svg"></object>
 
