Audio and Images folder moved to root for easier access

--- a/index.html
+++ b/index.html
@@ -96,16 +96,16 @@
 		<div id="disclaimer">WORK IN PROGRESS! DO NOT SHARE!</div>
 
 		<!-- Audio -->
-		<audio id="audioPlay"			src="./data/sounds/play.wav"></audio>
-		<audio id="audioTileDragStart"	src="./data/sounds/tileDragStart.wav"></audio>
-		<audio id="audioTileDragEnd"	src="./data/sounds/tileDragEnd.wav"></audio>
-		<audio id="audioTileSnapStart"	src="./data/sounds/tileSnapStart.wav"></audio>
-		<audio id="audioTileSnapEnd"	src="./data/sounds/tileSnapEnd.wav"></audio>
-		<audio id="audioNoteStart"		src="./data/sounds/noteStart.wav"></audio>
-		<audio id="audioNoteEnd"		src="./data/sounds/noteEnd.wav"></audio>
-		<audio id="audioOutroStart"		src="./data/sounds/outroStart.wav"></audio>
-		<audio id="audioOutroName"		src="./data/sounds/outroName.wav"></audio>
-		<audio id="audioOutroEnd"		src="./data/sounds/outroEnd.wav"></audio>
+		<audio id="audioPlay"			src="./audio/play.wav"></audio>
+		<audio id="audioTileDragStart"	src="./audio/tileDragStart.wav"></audio>
+		<audio id="audioTileDragEnd"	src="./audio/tileDragEnd.wav"></audio>
+		<audio id="audioTileSnapStart"	src="./audio/tileSnapStart.wav"></audio>
+		<audio id="audioTileSnapEnd"	src="./audio/tileSnapEnd.wav"></audio>
+		<audio id="audioNoteStart"		src="./audio/noteStart.wav"></audio>
+		<audio id="audioNoteEnd"		src="./audio/noteEnd.wav"></audio>
+		<audio id="audioOutroStart"		src="./audio/outroStart.wav"></audio>
+		<audio id="audioOutroName"		src="./audio/outroName.wav"></audio>
+		<audio id="audioOutroEnd"		src="./audio/outroEnd.wav"></audio>
 
 		<!-- Scripts -->
 		<script src="scripts/defs.js"></script>
