--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
 			<div id="introBox">
 				<div id="title">
 					<h2 id="locIntroTitle1">Vera and Karel's</h2>
-					<h1 id="titleBaby">DAUGHTER</h1>
-					<h2 id="locIntroTitle2">was born on June XXth 2024</h2>
+					<h1 id="locIntroTitle2">DAUGHTER</h1>
+					<h2 id="locIntroTitle3">was born on June XXth 2024</h2>
 				</div>
 				<div>
 					<p id="locIntroGame">To find out her name, please play<br />a little game we designed for her.</p>
