--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
 				<div id="title">
 					<h2 id="locIntroTitle1">Vera and Karel's</h2>
 					<h1 id="locIntroTitle2">DAUGHTER</h1>
-					<h2 id="locIntroTitle3">was born on June XXth 2024</h2>
+					<h2 id="locIntroTitle3"></h2>
+					<h2 id="locIntroTitle4">was born on June XXth 2024</h2>
 				</div>
 				<div>
 					<p id="locIntroGame">To find out her name, please play<br />a little game we designed for her.</p>
