Changed: Play button now contains instructions

--- a/index.html
+++ b/index.html
@@ -46,19 +46,20 @@
 					<h2 id="locIntroTitle4">was born on June XXth 2024</h2>
 				</div>
 				<div>
-					<p id="locIntroGame">To find out her name, please play<br />a little game we designed for her.</p>
+					<!-- <p id="locIntroGame">To find out her name, please play<br />a little game we designed for her.</p> -->
 
 					<div id="play" class="hidden">
-						<p><em id="locIntroSound">(with the sound on)</em></p>
+						<!-- <p><em id="locIntroSound">(with the sound on)</em></p> -->
 
 						<!-- Button -->
 						<button id="playButton" type="button" autofocus disabled>
-							<div id="playText" class="hidden">PLAY</div>
 						
-							<div id="loading">
+							<span id="loading">
 								<div id="loadingSpinner"></div>
-								<div id="loadingText">LOADING</div>
-							</div>
+							</span>
+							
+							<span id="playText">PLAY</span>
+							<div id="playDescription">to find out her name (sound on).</div>
 						</button>
 					</div>
 
