Added: Full-screen symbol in PLAY button

--- a/index.html
+++ b/index.html
@@ -54,8 +54,9 @@
 						<!-- Button -->
 						<button id="playButton" type="button" autofocus disabled>
 						
-							<span id="loading">
+							<span id="playSymbol">
 								<div id="loadingSpinner"></div>
+								<div id="playFullscreen" class="hidden">⛶</div>
 							</span>
 							
 							<span id="playText">PLAY</span>
