Changed: Typewritten, not handwritten font for notes.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 		<link rel="dns-prefetch" href="//fonts.googleapis.com">
 		<link href="https://fonts.gstatic.com" crossorigin="" rel="preconnect">
-		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Caveat|Roboto+Slab">
+		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Slab">
 		<link rel="stylesheet" type="text/css" href="styles/common.css" />
 		<link rel="stylesheet" type="text/css" href="styles/main.css" />
 		<link rel="stylesheet" type="text/css" href="styles/stars.css" />
@@ -78,18 +78,18 @@
 
 		<!-- Note -->
 		<div id="noteArea" class="ignoreCursor">
-			<div id="note" class="hidden"></div>
+			<div id="note" class="hidden noteText"></div>
 		</div>
 
 		<!-- Outro -->
 		<div class="fullScreen ignoreCursor">
-			<div id="outroNote" class="hidden">Welcome to this world,</div>
+			<div id="outroNote" class="hidden noteText">Welcome to this world,</div>
 			<div id="outroName" class="hidden">NAME</div>
 		</div>
 
 		<!-- Thank you note -->
 		<div id="creditsArea" class="hidden">
-			<div id="thanks">Thank you for playing!</div>
+			<div id="thanks" class="noteText">Thank you for playing!</div>
 			<div id="credits">Game by <a href="https://www.instagram.com/dododollydo/">Mom</a> and <a href="http://moricky.com">Dad</a>, art by <a href="https://www.behance.net/mikovecjir5bc4">Jirka</a>, audio by <a href="#">TBD</a>, testing by <a href="https://twitter.com/YorisYan">Joris</a>, <a href="https://www.instagram.com/katacik/">Katka</a>, and <a href="https://twitter.com/maruksp">Marek</a></div>
 		</div>
 
