--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
 		<script src="scripts/defs.js"></script>
 		<script src="scripts/main.js"></script>
 		<script src="scripts/debug.js"></script>
+		<script src="scripts/sound.js"></script>
 		<script src="scripts/game.js"></script>
 		<script src="scripts/camera.js"></script>
 		<script src="scripts/tile.js"></script>
