Removed: Drag start and end sounds, were confusing

--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
 
 		<!-- Audio -->
 		<audio id="audioPlay"			preload="auto" src="./audio/play.wav"></audio>
-		<audio id="audioTileDragStart"	preload="auto" src="./audio/tileDragStart.wav"></audio>
-		<audio id="audioTileDragEnd"	preload="auto" src="./audio/tileDragEnd.wav"></audio>
+		<!-- <audio id="audioTileDragStart"	preload="auto" src="./audio/tileDragStart.wav"></audio>
+		<audio id="audioTileDragEnd"	preload="auto" src="./audio/tileDragEnd.wav"></audio> -->
 		<audio id="audioTileSnapStart"	preload="auto" src="./audio/tileSnapStart.wav"></audio>
 		<audio id="audioTileSnapEnd"	preload="auto" src="./audio/tileSnapEnd.wav"></audio>
 		<audio id="audioNoteStart"		preload="auto" src="./audio/noteStart.wav"></audio>
