Added: Note continue prompt

--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
 		<!-- Note -->
 		<div id="noteArea" class="ignoreCursor">
 			<div id="note" class="hidden noteText"></div>
+			<div id="noteContinue" class="hidden">Tap anywhere to continue</div>
 		</div>
 
 		<!-- Outro -->
