Changed: Note continue button is a symbol now.

--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
 		</div>
 
 		<!-- Note -->
-		<div id="noteArea" class="ignoreCursor">
-			<div id="note" class="hidden noteText"></div>
-			<div id="noteContinue" class="hidden">Tap anywhere to continue</div>
+		<div id="noteArea">
+			<div id="note" class="noteText hidden ignoreCursor"></div>
+			<div id="noteContinue" class="hidden">✕</div>
 		</div>
 
 		<!-- Outro -->
