Added: Social sharing preview

--- a/index.html
+++ b/index.html
@@ -1,12 +1,21 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Project June</title>
+		<!-- Basics -->
+		<title>Vera and Karel's Daughter</title>
 		<meta charset="UTF-8" />
 		<meta name="author" content="Karel Moricky and Vera Ryzhkina">
 		<meta name="keywords" content="HTML, CSS, JavaScript">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 
+		<!-- Social sharing preview -->
+		<meta property="og:title" content="Vera and Karel's Daughter">
+		<meta property="og:description" content="Play a game we prepared for our baby daughter to find out her name.">
+		<meta property="og:image" content="http:baby.moricky.com/game2024/main/images/tile02.png">
+		<meta property="og:image:width" content="256">
+		<meta property="og:image:height" content="256">
+
+		<!-- Styles -->
 		<link rel="dns-prefetch" href="//fonts.googleapis.com">
 		<link href="https://fonts.gstatic.com" crossorigin="" rel="preconnect">
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Slab">
