Added: All social sharing meta data

--- a/index.html
+++ b/index.html
@@ -2,18 +2,35 @@
 <html>
 	<head>
 		<!-- Basics -->
-		<title>Vera and Karel's Daughter</title>
+		<title>Vera and Karel's daughter was born</title>
+		<meta name="description" content="Play a game we prepared for her and find out her name.">
 		<meta charset="UTF-8" />
 		<meta name="author" content="Karel Moricky and Vera Ryzhkina">
 		<meta name="keywords" content="HTML, CSS, JavaScript">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+		<meta name="theme-color" content="#0a1630">
+		<meta name="apple-mobile-web-app-capable" content="yes">
+		<link rel="icon" href="./images/favicon.png" sizes="16x16" type="image/png">
 
 		<!-- Social sharing preview -->
-		<meta property="og:title" content="Vera and Karel's Daughter">
-		<meta property="og:description" content="Play a game we prepared for our baby daughter to find out her name.">
-		<meta property="og:image" content="http:baby.moricky.com/game2024/main/images/tile02.png">
+		<meta property="og:title" content="Vera and Karel's daughter was born">
+		<meta property="og:description" content="Play a game we prepared for her and find out her name.">
+		<meta property="og:url" content="http://baby.moricky.com/game2024/main">
+		<meta property="og:locale" content="en_US">
+		<meta property="og:type" content="website">
+		<meta property="og:image" content="http://baby.moricky.com/game2024/main/images/og_image.jpg">
 		<meta property="og:image:width" content="256">
 		<meta property="og:image:height" content="256">
+
+		<meta name="twitter:card" content="summary_large_image">
+		<meta name="twitter:title" content="Vera and Karel's daughter was born">
+		<meta name="twitter:description" content="Play a game we prepared for her and find out her name.">
+		<meta name="twitter:creator" content="@karelmoricky">
+		<meta name="twitter:url" content="http://baby.moricky.com/game2024/main">
+		<meta name="twitter:image" content="http://baby.moricky.com/game2024/main/images/og_image.jpg">
+
+		<!-- Robots -->
+		<!-- <meta name="robots" content="index,follow"> -->
 
 		<!-- Styles -->
 		<link rel="dns-prefetch" href="//fonts.googleapis.com">
