Changed: Document title's language reflects user's choice

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<!-- Basics -->
-		<title>Vera and Karel's daughter was born</title>
+		<title>Vera and Karel have a girl!</title>
 		<meta name="description" content="Play a game we prepared for her and find out her name.">
 		<meta charset="UTF-8" />
 		<meta name="author" content="Karel Moricky and Vera Ryzhkina">
@@ -13,7 +13,7 @@
 		<link rel="icon" href="./images/favicon.png" sizes="16x16" type="image/png">
 
 		<!-- Social sharing preview -->
-		<meta property="og:title" content="Vera and Karel's daughter was born">
+		<meta property="og:title" content="Vera and Karel have a girl!">
 		<meta property="og:description" content="Play a game we prepared for her and find out her name.">
 		<meta property="og:url" content="http://baby.moricky.com/game2024/main">
 		<meta property="og:locale" content="en_US">
@@ -23,7 +23,7 @@
 		<meta property="og:image:height" content="256">
 
 		<meta name="twitter:card" content="summary_large_image">
-		<meta name="twitter:title" content="Vera and Karel's daughter was born">
+		<meta name="twitter:title" content="Vera and Karel have a girl!">
 		<meta name="twitter:description" content="Play a game we prepared for her and find out her name.">
 		<meta name="twitter:creator" content="@karelmoricky">
 		<meta name="twitter:url" content="http://baby.moricky.com/game2024/main">
