--- a/index.html
+++ b/index.html
@@ -42,7 +42,18 @@
 		<link rel="stylesheet" type="text/css" href="styles/intro.css" />
 		<link rel="stylesheet" type="text/css" href="styles/outro.css" />
 		<link rel="stylesheet" type="text/css" href="styles/note.css" />
+
+		<!-- Google tag (gtag.js) -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-F5DKLXSGKW"></script>
+		<script>
+			window.dataLayer = window.dataLayer || [];
+			function gtag(){dataLayer.push(arguments);}
+			gtag('js', new Date());
+
+			gtag('config', 'G-F5DKLXSGKW');
+		</script>
 	</head>
+
 	<body>
 		<!-- Starry sky -->
 		<div id="sky">
