Changed: Better symbol for closing notes

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 		<!-- Note -->
 		<div id="noteArea">
 			<div id="note" class="noteText hidden ignoreCursor"></div>
-			<div id="noteContinue" class="hidden">✕</div>
+			<div id="noteContinue" class="hidden">🡒</div>
 		</div>
 
 		<!-- Outro -->
@@ -151,16 +151,16 @@
 		</div>
 
 		<!-- Scripts -->
-		<script src="scripts/defs.js"></script>
-		<script src="scripts/main.js"></script>
-		<script src="scripts/debug.js"></script>
-		<script src="scripts/sound.js"></script>
-		<script src="scripts/game.js"></script>
-		<script src="scripts/camera.js"></script>
-		<script src="scripts/tile.js"></script>
-		<script src="scripts/note.js"></script>
-		<script src="scripts/intro.js"></script>
-		<script src="scripts/outro.js"></script>
-		<script src="scripts/localization.js"></script>
+		<script src="./scripts/defs.js"></script>
+		<script src="./scripts/main.js"></script>
+		<script src="./scripts/debug.js"></script>
+		<script src="./scripts/sound.js"></script>
+		<script src="./scripts/game.js"></script>
+		<script src="./scripts/camera.js"></script>
+		<script src="./scripts/tile.js"></script>
+		<script src="./scripts/note.js"></script>
+		<script src="./scripts/intro.js"></script>
+		<script src="./scripts/outro.js"></script>
+		<script src="./scripts/localization.js"></script>
 	</body>
 </html>
